[project]
name = "umie-datasets"
version = "0.1.0"
description = ""
authors = [{name = "a-huli", email = "klaudel.b@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0.0,<11",
    "opencv-python>=4.8.0.74,<5",
    "pyyaml>=6.0.1,<7",
    "untangle>=1.2.1,<2",
    "scikit-learn>=1.3.2,<2",
    "tqdm>=4.66.1,<5",
    "pydicom>=2.4.3,<3",
    "pandas>=2.1.3,<3",
    "pyaml>=23.9.7,<24",
    "types-pyyaml>=6.0.12.12,<7",
    "nibabel>=5.2.0,<6",
    "numpy>=1.26.4,<2",
    "jsonlines>=4.0.0,<5",
    "datasets>=2.21.0,<3",
    "huggingface-hub>=0.27.1,<1",
    "openpyxl>=3.1.5,<4",
    "bs4>=0.0.2,<1",
    "lxml>=5.3.0,<6",
    "webdataset>=0.2.100,<1",
    "kagglehub>=0.3.13,<1",
    "python-dotenv>=1.1.1,<2",
    "tcia-utils>=3.0.4,<4",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<9",
    "ruff>=0.11.0,<1",
    "commitizen>=3.6.0,<4",
    "pytest-cov>=4.1.0,<6",
    "pre-commit>=3.5.0,<5",
    "types-pyyaml>=6.0.12.12,<7",
    "coverage>=7.3.2,<8",
    "python-dotenv>=1.0.1,<2",
    "boto3>=1.34.126,<2",
    "ipykernel>=6.29.5,<7",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "W"]
ignore = ["E501", "D1"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["base", "src"]

[tool.hatch.build.targets.wheel]
packages = ["src/base", "src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
