[project]
name = "umie-datasets"
version = "0.1.0"
description = ""
authors = [{ name = "a-huli", email = "klaudel.b@gmail.com" }]
readme = "README.md"
# Single source of truth for the Python version (reconciled with CI and .trunk to 3.12).
requires-python = ">=3.12,<3.13"
dependencies = [
    "Pillow>=12.2.0,<13.0.0",  # >=12.2.0 fixes GHSA-pwv6/whj4/cfh3/r73j/wjx4 (security)
    "opencv-python>=4.8.0.74,<5.0.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "untangle>=1.2.1,<2.0.0",
    "scikit-learn>=1.6.0,<2.0.0",  # >=1.5.0 fixes GHSA-jw8x-6495-233v; BaseStep is BaseEstimator-compatible
    "tqdm>=4.66.1,<5.0.0",
    "pydicom>=2.4.3,<3.0.0",
    "pandas>=2.1.3,<3.0.0",
    "pyaml>=23.9.7,<24.0.0",
    "types-pyyaml>=6.0.12.12,<7.0.0",
    "nibabel>=5.2.0,<6.0.0",
    "numpy>=1.26.4,<2.0.0",
    "jsonlines>=4.0.0,<5.0.0",
    "datasets>=2.21.0,<3.0.0",
    "huggingface-hub>=0.27.1,<0.28.0",
    "openpyxl>=3.1.5,<4.0.0",
    "bs4>=0.0.2,<0.0.3",
    "lxml>=6.1.0,<7.0.0",  # >=6.1.0 fixes GHSA-vfmq-68hx-4jfw (security)
    "webdataset>=0.2.100,<0.3.0",
    "kagglehub>=0.3.13,<0.4.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "tcia-utils>=3.0.4,<4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",  # >=9.0.3 fixes GHSA-6w46-j5rx-g56g (security)
    "pytest-cov>=6.0.0,<8.0.0",  # bumped for pytest 9 compatibility
    "coverage>=7.6.0,<8.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "commitizen>=3.6.0,<4.0.0",
    # Lint/format consolidated onto Ruff (replaces black/isort/flake8); mypy kept for typing gate.
    "ruff>=0.6.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
    "pydocstyle>=6.3.0,<7.0.0",
    "types-pyyaml>=6.0.12.12,<7.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "boto3>=1.34.126,<2.0.0",
    "ipykernel>=6.29.5,<7.0.0",
]
docs = [
    "mkdocs>=1.6,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This repo is a flat, multi-root application (not a published library). Imports rely on two
# path roots: the repo root (for `src.*`, `config.*`, `testing.*`, `utils.*`) and `src/` (for
# `base.*` and `constants`). `dev-mode-dirs` reproduces exactly that during an editable `uv sync`,
# matching the previous Poetry `packages = [{include = "base", from = "src"}, {include = "src"}]`.
[tool.hatch.build.targets.wheel]
packages = ["src", "config", "utils"]
dev-mode-dirs = [".", "src"]

[tool.pytest.ini_options]
# Same two roots, so `pytest` resolves imports even without the editable install.
pythonpath = [".", "src"]
testpaths = ["testing/tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Mirror the previous flake8 ignores (E501 line length, F401 unused imports re-exported in
# __init__ modules); add import sorting (I) to replace isort.
select = ["E", "F", "W", "I"]
ignore = ["E501", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["base", "src", "config", "constants", "utils", "testing"]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
ignore_missing_imports = true
# The repo has no __init__.py files; with explicit_package_bases each file is named from the repo
# root (e.g. src.base.pipeline, config.labels), giving every file a single unambiguous module name.
namespace_packages = true
explicit_package_bases = true
exclude = ["testing/tests/"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
